<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_can</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>ros2_socketcan</depend>
  <depend>rclcpp</depend>
  <depend>odrive_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>bondcpp</depend>
  <depend>bond</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
